# multi_pippable

./: README.md  pyproject.toml
src/multi_pippable/: __init__.py  autoload.py  ex.py  multi_pippable.py
